# cfspeedtest-lib

./: Cargo.toml  README.md
examples/: download_test.rs  latency_test.rs  simple_speedtest.rs
src/: lib.rs  measurements.rs  progress.rs  speedtest.rs
