[package]
name = "cfspeedtest-lib"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Cloudflare Speed Test Library - a library for running Cloudflare speed tests"
readme = "README.md"
repository = "https://github.com/code-inflation/cfspeedtest/"
keywords = ["speedtest", "speed-test", "cloudflare", "library"]
categories = ["network-programming"]
exclude = [".github/"]

[dependencies]
log = "0.4"
tracing = "0.1"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.3.0"
serde_json = "1.0"
indexmap = "2.9.0"

# The following are needed only for example binaries
[dev-dependencies]
tracing-subscriber = "0.3"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

[[example]]
name = "simple_speedtest"
path = "examples/simple_speedtest.rs"

[[example]]
name = "latency_test"
path = "examples/latency_test.rs"

[[example]]
name = "download_test"
path = "examples/download_test.rs"
